<resources>
    <string name="app_name">Cryptonian</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="ok">OK</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="receive_sms_code">Receive SMS Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="verify_sms_code">Verify SMS Code!</string>
    <string name="resend_sms_code">Resend SMS Code</string>
    <string name="google_places_key" translatable="false">AIzaSyAwvV-TTuRBIfO7D6Q5Dy5B6ubz0hzrcr0</string>
    <string name="place_details" translatable="false">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>

    <string name="city_details" translatable="false">
        <![CDATA[
        Address: %3$s
        ]]>
    </string>
    <string name="post_ad">Post Your Ad</string>
    <string name="choose_category">Choose Category...</string>
    <string name="sub_category">Choose Sub-Category</string>
    <string name="price">Price</string>
    <string name="short_description">Please Write Short Description...</string>


    <string-array name="currencies">
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>TWD</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>

    <string-array name="crypto">
        <item>Bitcoin</item>
        <item>Ethereum</item>
        <item>Litecoin</item>
        <item>Bitcoin Cash</item>
        <item>Ripple</item>
        <item>Cardano</item>
        <item>Neo</item>
        <item>Stellar</item>
        <item>EOS</item>
        <item>Dash</item>
        <item>IOTA</item>
        <item>Monero</item>
        <item>Tron</item>
        <item>ICON</item>
        <item>Binance</item>
        <item>Verge</item>
        <item>Digibyte</item>
    </string-array>

    <string-array name="categories">
        <item>Real Estate</item>
        <item>Vehicle</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Jobs</item>
        <item>Fashion</item>
        <item>Pets</item>
        <item>Services</item>
    </string-array>

</resources>
