<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryDark"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:src="@drawable/image_holder"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/post_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/user_posts_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:scrollbars="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/choose_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/choose_category"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_margin="30dp"
                android:fontFamily="@font/alegreya_sans_sc"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/choose_subCategory"
                android:layout_below="@id/choose_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/sub_category"
                android:layout_centerInParent="true"
                android:layout_margin="30dp"
                android:fontFamily="@font/alegreya_sans_sc"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/choose_price"
                android:layout_below="@id/choose_subCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/price"
                android:layout_centerInParent="true"
                android:layout_margin="30dp"
                android:fontFamily="@font/alegreya_sans_sc"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/product_description"
                android:layout_below="@id/choose_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:enabled="false"
                android:hint="@string/short_description"
                android:layout_centerInParent="true"
                android:layout_margin="30dp"
                android:fontFamily="@font/alegreya_sans_sc"/>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/post_upload_button"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/post_ad"
        android:fontFamily="@font/alegreya_sc_bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="bottom"/>

</android.support.design.widget.CoordinatorLayout>