<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.gitbox.cryptonian.LoginActivity">

    <TextView
        android:id="@+id/verification_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_margin="50dp"
        android:maxWidth="100dp"
        android:textStyle="bold"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phoneNumber_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:textAlignment="center"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/verification_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:layout_below="@id/phoneNumber_field" />


    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/receive_code_button"
        android:text="@string/receive_sms_code"
        android:textStyle="bold"
        android:layout_below="@id/verification_field"
        android:layout_margin="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verification_field"
        android:id="@+id/verification_layout"
        android:orientation="horizontal"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verify_code_button"
            android:text="@string/verify_sms_code"
            android:textStyle="bold"
            android:layout_margin="25dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resend_code_button"
            android:text="@string/resend_sms_code"
            android:textStyle="bold"
            android:layout_margin="25dp" />

    </LinearLayout>

</RelativeLayout>
